--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -15,11 +15,14 @@ VITE_API_TIMEOUT=30000
 # Enable Debug Mode
 VITE_DEBUG=true
 
+# App Version
+VITE_APP_VERSION=1.0.0
+
 # Sentry DSN (Error Tracking - Optional)
-# VITE_SENTRY_DSN=your_sentry_dsn
+VITE_SENTRY_DSN=
 
 # Google Analytics (Optional)
-# VITE_GA_TRACKING_ID=UA-XXXXXXXXX-X
+VITE_GA_TRACKING_ID=
 
 # Image Upload Max Size (MB)
 VITE_MAX_IMAGE_SIZE=2
